// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flowchart-line-type-field Renders \`flowchart-line-type-field\` with custom props 1`] = `
<div
  class="layout justify-space-between align-center"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative;"
  >
    Custom label
  </label>
  <div
    class="flex xs3"
  >
    <div
      class="v-input mt-0 pt-0 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <svg
                height="30"
                viewBox="0 0 50 40"
                width="30"
              >
                <points-line-path-stub
                  curveoffset="0.6"
                  fill="transparent"
                  points="[object Object],[object Object]"
                  stroke="currentColor"
                  stroke-width="2"
                  type="line"
                />
              </svg>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              type="hidden"
              value="line"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-line-type-field Renders \`flowchart-line-type-field\` with custom props 2`] = `undefined`;

exports[`flowchart-line-type-field Renders \`flowchart-line-type-field\` with default averagePoints 1`] = `
<div
  class="layout justify-space-between align-center"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative;"
  >
    Custom label
  </label>
  <div
    class="flex xs3"
  >
    <div
      class="v-input mt-0 pt-0 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <svg
                height="30"
                viewBox="0 0 50 40"
                width="30"
              >
                <points-line-path-stub
                  curveoffset="0.6"
                  fill="transparent"
                  points="[object Object],[object Object]"
                  stroke="currentColor"
                  stroke-width="2"
                  type="line"
                />
              </svg>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              type="hidden"
              value="line"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-line-type-field Renders \`flowchart-line-type-field\` with default averagePoints 2`] = `undefined`;

exports[`flowchart-line-type-field Renders \`flowchart-line-type-field\` with default props 1`] = `
<div
  class="layout justify-space-between align-center"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative;"
  />
  <div
    class="flex xs3"
  >
    <div
      class="v-input mt-0 pt-0 v-input--hide-details theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              type="hidden"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-line-type-field Renders \`flowchart-line-type-field\` with default props 2`] = `undefined`;
